# reactive-portrait-animation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/personas/: default.toml
docs/: interfaces.md  phase2_plan_ryan.md  setup_models.md
src/reactive_portrait_animation/: __init__.py  __main__.py  cli.py  config.py
src/reactive_portrait_animation/animation/: __init__.py  joyvasa.py  mock.py  provider.py
src/reactive_portrait_animation/domain/: __init__.py  models.py
src/reactive_portrait_animation/perception/: __init__.py
src/reactive_portrait_animation/pipeline/: __init__.py  app.py
src/reactive_portrait_animation/preprocessing/: __init__.py  segmentation.py
src/reactive_portrait_animation/reasoning/: __init__.py
src/reactive_portrait_animation/speech/: __init__.py
tests/: test_animation.py  test_cli.py  test_config.py  test_segmentation.py
