[project]
name = "reactive-portrait-animation"
version = "0.1.0"
description = "Reactive portrait animation research prototype"
readme = "README.md"
authors = [
    { name = "Ryan Poppe", email = "ryanpoppe42@gmail.com" },
    { name = "Zachary Walton", email = "" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
]

[project.scripts]
reactive-portrait-animation = "reactive_portrait_animation.cli:main"
rpa = "reactive_portrait_animation.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
# GPU-side extras (torch + sam2 installed separately; see docs/setup_models.md)
preprocess = [
    "numpy>=2.0",
    # <5: cv2.CascadeClassifier (objdetect) is unavailable in opencv-python 5.x builds
    "opencv-python>=4.10,<5",
    "torch>=2.6",
    "torchvision>=0.21",
    "sam-2",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["reactive_portrait_animation"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
packages = ["reactive_portrait_animation"]

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "sam2.*", "torch", "torch.*"]
ignore_missing_imports = true
follow_imports = "skip"
